# LogicEngine

./: .gitignore  CMakeLists.txt  CPostfixLogicParser.h  CRPNLogicParser.cpp  CRPNLogicParser.h  LogicBlocks.cpp  LogicBlocks.h  logic.cpp  logic.h  logic_tests.cpp  rpn_parser.cpp  rpn_parser.h
src/: CInfixToPostfixExpression.cpp  CInfixToPostfixExpression.h  CMakeLists.txt  CPostfixLogicParser.cpp  LogicBlocks.cpp
tests/: CMakeLists.txt  logic_tests.cpp
